[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/Screen/CreateCard/EditEffect/ConditionContainer.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/Screen/CreateCard/EditEffect/EffectBox.gd" type="Script" id=2]
[ext_resource path="res://assets/Screen/CreateCard/EditEffect/CostContainer.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/Screen/CreateCard/EditEffect/ActionContainer.tscn" type="PackedScene" id=4]

[node name="EffectBox" type="HBoxContainer"]
margin_right = 648.0
margin_bottom = 320.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_right = 19.0
margin_bottom = 320.0
rect_pivot_offset = Vector2( -364, -118 )
size_flags_vertical = 1
text = "E1:"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 23.0
margin_right = 648.0
margin_bottom = 320.0
size_flags_horizontal = 3
custom_constants/separation = 8

[node name="EffectInfoContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 625.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="VBoxContainer/EffectInfoContainer"]
margin_top = 5.0
margin_right = 81.0
margin_bottom = 19.0
text = "Effect Label :"

[node name="EffectLabelEdit" type="LineEdit" parent="VBoxContainer/EffectInfoContainer"]
margin_left = 85.0
margin_right = 335.0
margin_bottom = 24.0
rect_min_size = Vector2( 250, 0 )

[node name="RemoveEffectBtn" type="Button" parent="VBoxContainer/EffectInfoContainer"]
margin_left = 522.0
margin_right = 625.0
margin_bottom = 24.0
rect_min_size = Vector2( 30, 0 )
size_flags_horizontal = 14
custom_colors/font_color = Color( 1, 0.501961, 0, 1 )
custom_colors/font_color_hover = Color( 1, 0.266667, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 0, 0, 1 )
text = "Remove Effect"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AllCondContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 32.0
margin_right = 625.0
margin_bottom = 52.0

[node name="Label" type="Label" parent="VBoxContainer/AllCondContainer"]
margin_right = 40.0
margin_bottom = 20.0
size_flags_vertical = 5
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Cond :"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConditionContainer" parent="VBoxContainer/AllCondContainer" instance=ExtResource( 1 )]
margin_bottom = 20.0

[node name="AllCostContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 60.0
margin_right = 625.0
margin_bottom = 80.0

[node name="Label" type="Label" parent="VBoxContainer/AllCostContainer"]
margin_right = 45.0
margin_bottom = 20.0
rect_min_size = Vector2( 45, 0 )
size_flags_vertical = 5
custom_colors/font_color = Color( 0, 1, 1, 1 )
text = "Cost :"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CostContainer" parent="VBoxContainer/AllCostContainer" instance=ExtResource( 3 )]
margin_bottom = 20.0

[node name="AllActionContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 88.0
margin_right = 625.0
margin_bottom = 108.0

[node name="Label" type="Label" parent="VBoxContainer/AllActionContainer"]
margin_right = 45.0
margin_bottom = 20.0
rect_min_size = Vector2( 45, 0 )
size_flags_vertical = 5
custom_colors/font_color = Color( 0, 1, 0, 1 )
text = "Act :"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ActionContainer" parent="VBoxContainer/AllActionContainer" instance=ExtResource( 4 )]
margin_bottom = 20.0

[connection signal="pressed" from="VBoxContainer/EffectInfoContainer/RemoveEffectBtn" to="." method="_on_RemoveEffectBtn_pressed"]
